--- a/cloudfunctions/shop_update_sku/package.json
+++ b/cloudfunctions/shop_update_sku/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "wx-server-sdk": "~3.0.1",
-    "@cloudbase/node-sdk": "3.2"
+    "wx-server-sdk": "~2.4.0"
   }
 }
